@@ -3,6 +3,14 @@ Summary of important user-visible changes for nurbs 1.3.8:
 
  * inst/nrbkntremove.m: added new function
 
+ * inst/nrbunclamp.m: added new function
+
+ * inst/nrbmak.m: adapted for unclamped knot vector
+
+ * inst/nrbplot.m: adapted for unclamped knot vector
+
+ * inst/nrbkntplot.m: adapted for unclamped knot vector
+
 Summary of important user-visible changes for nurbs 1.3.7:
 -------------------------------------------------------------------
 
